
This is being used for internal development, with the intent to make these facilities generally available.
Consider the JUnit testing to be experimental.

-------------
Testing and patches for  Bug 24 -  Inconsistent return of resource on IRODSFile
*return physical resource for IRODSFile.getResource() when it is a File

-------------
Testing and patches for  Bug 31 -  Create IRODS file by URI and do put - null resource causes -78000 IRODS error
*created test cases to capture bug

-------------
Testing and patches for  Bug 32 -   copyTo when dest file is from URI results in -78000 resource not found
*created test cases to capture bug

-------------
Testing and patches for Bug 29 - problem with Jargon physically deleting a file

--------------
Testing and fix for Bug 34  -  resource not found when doing irodsFileSystem.createTarFile

--------------
Added IRODSFile.getAllResources() which will return all resources for an IRODS File
for feature request:  Bug 35 -  add getResources() method

--------------
Removed static IRODSFileSystem in IRODSAdmin and adjusted constructors, removed static methods in
Domain, User, Resource.  This is an API change, but seemed unavoidable.

for feature request:   Bug 30 -  query a resource list for a user shows all resources user has files in

--------------
Testing and fix for  Bug 36 -  resource added with icommand does not show up in Jargon query

Added new metadata to query resource name by collection, IRODSMetaDataSet.COLL_RESOURCE_NAME,
see testQueryMetaDataSelectArray() in GeneralFileSystem for usage example.

================================================================================================
Outstanding Issues





================================================================================================
Documentation and Installation

-See the README.txt in this distribution
-Review Jargon documentation at: http://www.irods.org/index.php/Jargon
-Review information at the IRODS web site: http://www.irods.org