@@ -25,7 +25,7 @@ public class InitializeCdCommand implements Icommand {
 	/* (non-Javadoc)
 	 * @see org.irods.jargon.icommandinvoke.icommands.Icommand#buildCommand()
 	 */
-	@Override
+	
 	public List<String> buildCommand() {
 		List<String> commandProps = new ArrayList<String>();
 		commandProps.add("icd");
