@@ -7,14 +7,14 @@ import org.junit.runner.RunWith;
 import org.junit.runners.Suite;
 
 import edu.sdsc.grid.io.irods.IRODSAccountTest;
+import edu.sdsc.grid.io.irods.IRODSCommandsCopyToTest;
 import edu.sdsc.grid.io.irods.IRODSCommandsDeleteTest;
 import edu.sdsc.grid.io.irods.IRODSFileSystemCreateTarTest;
+import edu.sdsc.grid.io.irods.IRODSFileSystemGsiHandlingTest;
 import edu.sdsc.grid.io.irods.IRODSFileSystemMetadataQueryTest;
-import edu.sdsc.grid.io.irods.IRODSResourceQueryTest;
-import edu.sdsc.grid.io.irods.IRODSCommandsCopyToTest;
-import edu.sdsc.grid.io.irods.IRODSFileOutputStreamTest;
 import edu.sdsc.grid.io.irods.IRODSFileSystemTest;
 import edu.sdsc.grid.io.irods.IRODSFileTest;
+import edu.sdsc.grid.io.irods.IRODSResourceQueryTest;
 import edu.sdsc.grid.io.irods.ResourceTest;
 
 /**
@@ -37,7 +37,8 @@ import edu.sdsc.grid.io.irods.ResourceTest;
   IRODSFileSystemTest.class,
   IRODSAccountTest.class,
   IRODSFileSystemCreateTarTest.class,
-  ResourceTest.class
+  ResourceTest.class,
+  IRODSFileSystemGsiHandlingTest.class
 })
 public class IRODSTests {
 
