@@ -14,7 +14,7 @@
 # ---------------------------------------------------------------------
 # If you want to run tests, set test.confirm to true, otherwise, TestingPropertiesHelper will
 # terminate with an exception  test.confirm=true|false
-test.confirm=false
+test.confirm=true
 #----------------------------------------------------------------------
 # directory to generate scratch files locally...make sure it has trailing slash
 # This directory should point to the 'target' directory of Jargon.  Target is created when you
